# mpd-display

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
MpdClientCpp/: CMakeLists.txt
MpdClientCpp/include/: MpdAudioFormat.h  MpdClient.h  MpdSong.h  MpdStatus.h
MpdClientCpp/source/: MpdClient.cpp  MpdSong.cpp  MpdStatus.cpp
Unidecode/: CMakeLists.txt
Unidecode/include/: Unidecode.h
Unidecode/source/: Unidecode.cpp
source/: main.cpp
